--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   hexcolor: ^2.0.7
   hive: ^2.2.1
+  intl: ^0.17.0
   lite_rolling_switch: ^0.1.1
   path_provider: ^2.0.10
   provider: ^6.0.3
