--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hive: ^2.2.1
   intl: ^0.17.0
   lite_rolling_switch: ^0.1.1
+  lottie: ^1.3.0
   path_provider: ^2.0.10
   provider: ^6.0.3
   switcher: ^1.0.0
