--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.1.0
+  google_fonts: ^3.0.1
   hexcolor: ^2.0.7
   hive: ^2.2.1
   intl: ^0.17.0
+  liquid_pull_to_refresh: ^3.0.1
   lite_rolling_switch: ^0.1.1
   lottie: ^1.3.0
+  path_drawing: ^1.0.0
   path_provider: ^2.0.10
   provider: ^6.0.3
   switcher: ^1.0.0
@@ -57,7 +60,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/lotties/
+    - assets/lotties/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -67,10 +70,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: digital
+      fonts:
+        - asset: assets/fonts/digital.ttf
+    
+  
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
