--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3006,7 +3006,11 @@
         "editor.unicodeHighlight.ambiguousCharacters": false,
         "editor.unicodeHighlight.invisibleCharacters": false,
         "editor.wordWrap": "on",
-        "editor.quickSuggestions": false
+        "editor.quickSuggestions": {
+            "comments": "off",
+            "strings": "off",
+            "other": "off"
+        }
     },
     // Configurez les paramètres à remplacer pour le langage [plaintext].
     "[plaintext]": {
